--- a/modules/admin/pages/index.adoc
+++ b/modules/admin/pages/index.adoc
@@ -1,22 +1,26 @@
 = Аннотация
 
+Приложение "Делопроизводство. Версия 5" добавляет в систему "{dv} 5.5" (далее -- "{dv}") возможность автоматизации базовых процессов делопроизводства организации.
+
 == Назначение документа
 
-Настоящий документ является руководством администратора приложения "{dv} 5. Делопроизводство. Версия 5" (_Приложение_).
+Настоящий раздел документации посвящён описанию приложения _{dv} 5. Делопроизводство. Версия 5_.
 
-Документ содержит инструкцию по установке и первоначальной настройке Приложения (серверной и клиентской частей).
-
-Документ предназначен для администраторов и инженеров системы {dv}.
+Документация содержит инструкцию по установке, первоначальной настройке серверной и клиентской частей приложения, а также руководство пользователя приложения.
 
 == Как организован документ
 
 Настоящее руководство содержит следующие разделы:
 
-[arabic]
 . xref:General_information.adoc[Общие сведения] (приведены общие сведения о Приложении, требования Приложения к программному и аппаратному обеспечению компьютера).
 . xref:Structureof_program.adoc[Структура Приложения] (перечислены составные части Приложения).
 . xref:Install_and_configuration.adoc[Установка и настройка] (содержит инструкцию по установке Приложения).
 . xref:Administrator_functions.adoc[Функции администратора] (содержит описание настроек Приложения, выполняемых администратором {dv}).
+. xref:user:Scope.adoc[Область применения] (приведены общие сведения о Приложении, требования к подготовке пользователей).
+. xref:user:Preparationfor_work.adoc[Подготовка к работе] (приведены условия для работы с карточками Модуля в программе Windows-клиент/РМА).
+. xref:user:Folder_Application_OfficeWork.adoc[Папки приложения] (приведено описание папок Приложения);
+. xref:user:Description_Fields_and_Buttons.adoc[Описание интерфейса карточек Приложения] (приведено описание пользовательского интерфейса карточек ДокументДП, Резолюция, заданий По резолюции и На рассмотрение, Справочника номенклатуры дел 5 и карточки Дело);
+. xref:user:Operations.adoc[Описание операций] (приведено описание основных операций с документами, резолюциями и заданиями Приложения, а также со Справочником номенклатуры дел 5).
 
 == Соглашения по оформлению
 
