--- a/modules/user/user.adoc
+++ b/modules/user/user.adoc
@@ -1,203 +1,203 @@
 = Руководство пользователя
 
-* xref:Annotation.adoc[Аннотация]
-* xref:Introduction.adoc[Введение]
-** xref:Scope.adoc[Область применения]
-** xref:Capabilities.adoc[Краткое описание возможностей]
-** xref:UserLevel.adoc[Уровень подготовки пользователя]
-** xref:Listof_documentation.adoc[Перечень эксплуатационной документации]
-* xref:Preparationfor_work.adoc[Подготовка к работе]
-** xref:Application_run.adoc[Запуск модуля]
-* xref:Folder_Application_OfficeWork.adoc[Папки приложения]
-** xref:Navigator_folders_OWmodul_document.adoc[Папки для работы с документами]
-*** xref:Folder_OfficeWork_DocInc.adoc[Папки для работы с входящими документами]
-*** xref:Folder_OfficeWork_DocBackground.adoc[Папки для работы с информационно-справочными документами]
-*** xref:Folder_OfficeWork_DocOut.adoc[Папки для работы с исходящими документами]
-*** xref:Folder_OfficeWork_DocOrg.adoc[Папки для работы с организационными документами]
-*** xref:Folder_OfficeWork_DocAdm.adoc[Папки для работы с распорядительными документами]
-*** xref:Folder_OfficeWork_Case.adoc[Папка "Дело"]
-*** xref:Folder_OfficeWork_SearchDoc.adoc[Папка "Поиск Документов"]
-** xref:Navigator_folders_OWmodul_report.adoc[Папки для работы с отчетами]
-** xref:Folder_OfficeWork_Resolution.adoc[Папки для работы с карточкой Резолюция]
-* xref:Description_Fields_and_Buttons.adoc[Описание интерфейса карточек Приложения]
-** xref:Card_Doc.adoc[Карточки "ДокументДП"]
-*** xref:Card_DocInc.adoc[Карточка входящего документа]
-*** xref:Card_DocInc_Ribbon.adoc[Лента карточки входящего документа]
-**** xref:Card_DocInc_Tab_General.adoc[Вкладка "Регистрация" карточки входящего документа]
-**** xref:Card_DocBackground.adoc[Карточка информационно-справочного документа]
-*** xref:Card_DocBackground_Ribbon.adoc[Лента карточки информационно-справочного документа]
-**** xref:Card_DocBackground_Tab_General.adoc[Вкладка "Регистрация" карточки информационно-справочного документа]
-*** xref:Card_DocOut.adoc[Карточка исходящего документа]
-**** xref:Card_DocOut_Ribbon.adoc[Лента карточки исходящего документа]
-**** xref:Card_DocOut_Tab_General.adoc[Вкладка "Регистрация" карточки исходящего документа]
-*** xref:Card_DocOrg.adoc[Карточка организационного документа]
-**** xref:Card_DocOrg_Ribbon.adoc[Лента карточки организационного документа]
-**** xref:Card_DocOrg_Tab_General.adoc[Вкладка "Регистрация" организационного документа]
-*** xref:Card_DocAdm.adoc[Карточка распорядительного документа]
-**** xref:Card_DocAdm_Ribbon.adoc[Лента карточки распорядительного документа]
-**** xref:Card_DocAdm_Tab_General.adoc[Вкладка "Регистрация" распорядительного документа]
-*** xref:Card_Doc_Tab_Category.adoc[Вкладка "Журнал и категории"]
-**** xref:Card_Doc_Tab_CatJourn_Journal_Entry.adoc[Запись в журнале приема-передачи документа]
-*** xref:Card_Doc_Tab_Files.adoc[Вкладка "Файлы"]
-*** xref:Card_Doc_Tab_Comments.adoc[Вкладка "Комментарии"]
-*** xref:Card_Doc_Tab_Connection.adoc[Вкладка "Ссылки"]
-*** xref:Card_Doc_Tab_History.adoc[Вкладка "История"]
-*** xref:Card_Doc_Tab_PerformerTask.adoc[Вкладка "Исполнение"]
-** xref:Card_Resol.adoc[Карточка "Резолюция"]
-*** xref:Card_Resolution_Ribbon.adoc[Лента инструментов карточки Резолюция]
-*** xref:Card_Resolution_Tab_General.adoc[Вкладка "Резолюция"]
-*** xref:Card_Resolution_Tab_Performer.adoc[Вкладка "Исполнение"]
-*** xref:Card_Resolution_Tab_Comments.adoc[Вкладка "Комментарии и дополнения"]
-*** xref:Card_Resolution_Tab_History.adoc[Вкладка "История"]
-*** xref:Resolution_in_SimpleForm.adoc[Резолюция в простой письменной форме]
-** xref:Cards_Task_by_Resolution.adoc[Задание "По резолюции"]
-*** xref:Task_by_Resolution_Ribbon.adoc[Лента инструментов задания "По резолюции"]
-*** xref:Task_by_Resolution_Tab_Task.adoc[Вкладка "Задание"]
-*** xref:Task_by_Resolution_Tab_ReportComments.adoc[Вкладка "Отчеты и комментарии"]
-*** xref:Task_by_Resolution_Tab_History.adoc[Вкладка "История"]
-** xref:Cards_Task_for_Review.adoc[Задание "На рассмотрение"]
-*** xref:Task_for_Review_Ribbon.adoc[Лента инструментов задания "На рассмотрение"]
-*** xref:Task_for_Review_Tab_Task.adoc[Вкладка "Задание"]
-*** xref:Task_for_Review_Tab_History.adoc[Вкладка "История"]
-** xref:Ref_Rang_of_cases.adoc[Справочник номенклатуры дел 5]
-*** xref:Ref_Range_of_Cases_Ribbon.adoc[Лента справочника]
-*** xref:Ref_Range_of_Cases_TabGeneral.adoc[Поля справочника]
-** xref:Card_Case.adoc[Карточка "Дело"]
-*** xref:Card_Case_Ribbon.adoc[Лента инструментов карточки Дело]
-*** xref:Card_Case_Tab_General.adoc[Поля карточки Дело]
-* xref:Operations.adoc[Описание операций]
-** xref:Doc_Work.adoc[Работа с электронным документом]
-*** xref:Doc_Work_General.adoc[Общие сценарии работы с электронными документами]
-**** xref:Doc_Card_Create.adoc[Создание карточки документа]
-**** xref:Selection_Numbers_Document.adoc[Выделение номера документу]
-***** xref:Number_Temporary.adoc[Выделение временного номера]
-***** xref:Number_Permanent.adoc[Присвоение постоянного номера документу]
-**** xref:Doc_File_Attach.adoc[Прикрепление файлов]
-**** xref:Doc_Encrypting.adoc[Шифрование файлов]
-**** xref:Add_Comments_Doc.adoc[Добавление комментария к документу]
-**** xref:Doc_Categorization.adoc[Категоризация документа]
-**** xref:Write_off_case.adoc[Прикрепление карточки документа к делу]
-**** xref:Hierarchy_Associated_Cards.adoc[Установление связей между карточками]
-***** xref:Doc_Link_Add.adoc[Указание связанного документа]
-***** xref:Doc_Link_Create.adoc[Создание связанного документа]
-****** xref:Doc_Link_Create_Button.adoc[Создание связанного документа по кнопке "Создание карточки"]
-****** xref:Doc_Link_Create_Context_Menu.adoc[Создание связанной карточки документа произвольного вида]
-***** xref:Viewing_Hierarchy_Cards.adoc[Просмотр иерархии связанных карточек]
-**** xref:Doc_Sign.adoc[Наложение произвольной подписи]
-**** xref:Doc_Sign_View.adoc[Просмотр подписей документа]
-**** xref:Doc_Archive_General.adoc[Перевод документов в архив]
-**** xref:File_Unload.adoc[Выгрузка и печать документа]
-**** xref:Agreement_Document.adoc[Согласование документа]
-***** xref:Doc_Start_Approval.adoc[Отправка документа на согласование]
-***** xref:Monitoring_Agreement.adoc[Наблюдение хода согласования документа]
-****** xref:View_Log_Approval.adoc[Просмотр журнала согласования]
-****** xref:View_List_Approval.adoc[Просмотр листа согласования]
-****** xref:Management_Approvals_for_Document.adoc[Просмотр карточки Согласование. Управление активным согласованием]
-**** xref:Doc_Signing.adoc[Фиксация факта подписания документа без предварительного согласования]
-**** xref:Doc_CreateTasks.adoc[Создание заданий На исполнение и групп заданий по документу]
-**** xref:Sending_to_Familiarize.adoc[Рассылка документа на ознакомление]
-**** xref:Sending_for_Consideration.adoc[Отправка документа на рассмотрение]
-**** xref:Doc_Consideration_of_Doc.adoc[Рассмотрение документа должностным лицом]
-***** xref:Task_Take_Consideration_Head_is_Offline.adoc[Рассмотрение документа должностным лицом, не работающим в СЭД]
-**** xref:Acceptance_Transfer_of_Documents.adoc[Прием-передача документа]
-**** xref:StatementonControl.adoc[Контроль исполняемого документа]
-***** xref:Statement_on_Control.adoc[Постановка документа на контроль]
-***** xref:Work_Controller.adoc[Работа контролера документа]
-***** xref:Transfer_to_State_Executed.adoc[Перевод документа в состояние "Исполнен"]
-***** xref:Removal_from_Control.adoc[Снятие документа с контроля]
-**** xref:Doc_Send.adoc[Отправка документа пользователю {dv}]
-***** xref:Doc_Mail.adoc[Отправка письмом]
-*** xref:Doc_Inc_Work.adoc[Работа с входящим документом]
-**** xref:Selection_of_Recipients_Inc.adoc[Выбор адресатов и получателей]
-*** xref:Doc_Out_Work.adoc[Работа с исходящим документом]
-**** xref:Selection_of_Recipients_Out.adoc[Выбор получателей исходящего документа]
-**** xref:Out_Doc_Send.adoc[Отправка документа адресатам]
-**** xref:Doc_Out_Work_Printing_an_Envelope.adoc[Печать конвертов и файлов исходящего документа]
-**** xref:Doc_Out_Print_Registry_Mailings.adoc[Формирование и печать реестра почтовых отправлений]
-*** xref:Doc_Background_Work.adoc[Работа с информационно-справочным документом]
-*** xref:Doc_Org_Work.adoc[Работа с организационным документом]
-*** xref:Doc_Adm_Work.adoc[Работа с распорядительным документом]
-** xref:Work_Resol.adoc[Создание и управление резолюцией]
-*** xref:Card_Resol_Interface.adoc[Интерфейс карточки "Резолюция" в различных состояниях]
-*** xref:Preparation_Resolution.adoc[Подготовка резолюции]
-**** xref:Creat_Resolution.adoc[Создание карточки резолюции]
-***** xref:Creat_Initiative_Resol.adoc[Создание инициативной резолюции]
-***** xref:Create_Resolition_of_Template.adoc[Создание резолюции по шаблону]
-***** xref:Creation_Resolution_of_Cards_DocAdm.adoc[Создание резолюции из карточки документа]
-**** xref:Schedule_Resolution.adoc[Заполнение полей карточки резолюции]
-***** xref:Add_Registration_Data.adoc[Указание общих данных резолюции]
-***** xref:Add_Executive_Resolution.adoc[Формирование пункта резолюции]
-****** xref:Task_create_performer.adoc[Выбор исполнителя пункта резолюции]
-******* xref:Task_performer_select_from_guide.adoc[Выбор исполнителя задания из Справочника сотрудников]
-******* xref:Task_performer_select_quick_search.adoc[Выбор исполнителя с помощью быстрого поиска]
-******* xref:Task_performer_select_from_list.adoc[Выбор исполнителя из сформированного списка]
-****** xref:Setting_control.adoc[Постановка пункта резолюции на контроль]
-***** xref:Attach_DocFile_to_Resol.adoc[Прикрепление файлов и документов к карточке резолюции]
-*** xref:Sent_Resolution_for_Approval.adoc[Отправка резолюции на утверждение]
-*** xref:Sent_Resolution_for_Revision.adoc[Отправка резолюции на доработку]
-*** xref:Sent_Resolution_for_Execution.adoc[Отправка резолюции на исполнение]
-*** xref:Tree_Resolution.adoc[Дерево резолюций]
-**** xref:Management_Tree_Resolutions.adoc[Управление Деревом резолюций из контекстного меню]
-**** xref:State_Tree_Node_Resolutions.adoc[Индикаторы состояния узла дерева резолюций]
-*** xref:Edit_Resolution.adoc[Управление запущенной резолюцией]
-**** xref:Review_of_Resolution.adoc[Отзыв резолюции]
-**** xref:Forced_Finish.adoc[Принудительное завершение резолюции]
-**** xref:Edit_Text_Resolution.adoc[Изменение текста поручения резолюции]
-**** xref:Change_Performer_Task.adoc[Смена исполнителя задания]
-**** xref:Postponement_of_Execution.adoc[Перенос сроков исполнения]
-**** xref:Edit_Control_Resolution.adoc[Изменение контроля исполнения резолюции]
-*** xref:Control_Fulfil_Resolution.adoc[Контроль исполнения резолюции]
-**** xref:Task_Fulfil_Progress.adoc[Контроль хода исполнения]
-**** xref:Task_Approve.adoc[Выполнение приёмки задания]
-***** xref:Acceptance_of_Organization.adoc[Приемка организации]
-***** xref:Acceptance_Subdivision.adoc[Приемка подразделения]
-** xref:Task_Work.adoc[Работа с заданиями]
-*** xref:Task_Take.adoc[Получение задания исполнителем и порядок работы с ним]
-**** xref:Task_Take_Performance.adoc[Порядок работы с заданием "На исполнение"]
-**** xref:Task_Take_Familiarize.adoc[Порядок работы с заданием "На ознакомление"]
-**** xref:Task_Take_Resolution.adoc[Порядок работы с заданием "По резолюции"]
-***** xref:Task_get_responsible_performer.adoc[Получение заданий Ответственным исполнителем]
-***** xref:Task_Create_SubResolution.adoc[Создание резолюции из карточки задания "По резолюции"]
-**** xref:Task_Take_Consideration.adoc[Порядок работы с заданием "На рассмотрение"]
-***** xref:Print_Resolution_Blank.adoc[Печать бланка резолюции]
-***** xref:Task_Create_Resolution.adoc[Создание резолюции из карточки задания "На рассмотрение"]
-*** xref:Task_Fulfil.adoc[Действия в ходе исполнения задания]
-**** xref:Task_TakeInWork.adoc[Взятие в работу]
-**** xref:Task_Delegate.adoc[Делегирование]
-**** xref:Task_Fulfil_Fix.adoc[Добавление отчетов, комментариев, документов во исполнение]
-***** xref:Add_Comments_Task.adoc[Добавление комментария к заданию]
-***** xref:Add_Reports.adoc[Прикрепление документа во исполнение]
-****** xref:Add_Reports_New_Doc.adoc[Прикрепление файла из файловой системы]
-****** xref:Add_Report_Existing_Doc.adoc[Прикрепление существующей карточки документа]
-****** xref:Add_Reports_Copy_Doc.adoc[Копирование документов во исполнение из задания дочерней резолюции]
-****** xref:Add_Reports_Delet_Doc.adoc[Удаление документов во исполнение]
-***** xref:Attach_Report_Task.adoc[Прикрепление отчета к карточке задания]
-**** xref:Setting_Reminders.adoc[Установка напоминания о задании]
-**** xref:Task_Familiarization_with_Documents.adoc[Просмотр приложенного к заданию документа]
-*** xref:Task_Reject.adoc[Отказ от исполнения]
-*** xref:Task_Deputy_Work.adoc[Работа заместителя с заданиями замещаемого]
-*** xref:Task_Finish.adoc[Завершение задания]
-** xref:Work_Ref_Cases.adoc[Создание и ведение номенклатуры дел]
-*** xref:Organization_Range_of_cases_Year.adoc[Формирование номенклатуры дел на год]
-**** xref:Create_Range_of_cases.adoc[Создание номенклатуры дел на год]
-***** xref:Create_New_Range_of_cases.adoc[Создание новой номенклатуры дел]
-***** xref:Create_Copy_Range_of_cases.adoc[Копирование номенклатуры]
-**** xref:Edit_Year.adoc[Изменение года номенклатуры]
-**** xref:Del_Section.adoc[Удаление номенклатуры дел]
-**** xref:Organisation_Section_Range_of_cases.adoc[Формирование разделов номенклатуры]
-***** xref:Add_Section.adoc[Добавление нового раздела номенклатуры]
-***** xref:Rename_section.adoc[Переименование раздела номенклатуры]
-***** xref:Del_Rang_of_cases.adoc[Удаление раздела номенклатуры дел]
-**** xref:Work_of_Case.adoc[Формирование набора дел]
-***** xref:State_machine_Card_Case.adoc[Жизненный цикл дела]
-***** xref:Creat_New_Cases.adoc[Создание нового дела]
-***** xref:Edit_Card_Case.adoc[Редактирование записи о деле]
-***** xref:Del_Card_Case.adoc[Удаление дела]
-*** xref:Ratification_Rang_of_cases.adoc[Утверждение номенклатуры дел]
-*** xref:Print_Rang_of_cases.adoc[Печать номенклатуры дел на год]
-*** xref:Close_Range_of_cases.adoc[Закрытие номенклатуры дел]
-*** xref:Search_Range_of_cases.adoc[Поиск в Справочнике номенклатуры дел]
-**** xref:Search_Section_of_Ref_Rang.adoc[Поиск раздела]
-**** xref:Search_Case.adoc[Поиск дела]
-* xref:Abbreviations.adoc[Перечень принятых сокращений]
-* xref:Terms.adoc[Перечень терминов и их определений]
+* xref:Annotation.adoc[]
+* xref:Introduction.adoc[]
+** xref:Scope.adoc[]
+** xref:Capabilities.adoc[]
+** xref:UserLevel.adoc[]
+** xref:Listof_documentation.adoc[]
+* xref:Preparationfor_work.adoc[]
+** xref:Application_run.adoc[]
+* xref:Folder_Application_OfficeWork.adoc[]
+** xref:Navigator_folders_OWmodul_document.adoc[]
+*** xref:Folder_OfficeWork_DocInc.adoc[]
+*** xref:Folder_OfficeWork_DocBackground.adoc[]
+*** xref:Folder_OfficeWork_DocOut.adoc[]
+*** xref:Folder_OfficeWork_DocOrg.adoc[]
+*** xref:Folder_OfficeWork_DocAdm.adoc[]
+*** xref:Folder_OfficeWork_Case.adoc[]
+*** xref:Folder_OfficeWork_SearchDoc.adoc[]
+** xref:Navigator_folders_OWmodul_report.adoc[]
+** xref:Folder_OfficeWork_Resolution.adoc[]
+* xref:Description_Fields_and_Buttons.adoc[]
+** xref:Card_Doc.adoc[]
+*** xref:Card_DocInc.adoc[]
+*** xref:Card_DocInc_Ribbon.adoc[]
+**** xref:Card_DocInc_Tab_General.adoc[]
+**** xref:Card_DocBackground.adoc[]
+*** xref:Card_DocBackground_Ribbon.adoc[]
+**** xref:Card_DocBackground_Tab_General.adoc[]
+*** xref:Card_DocOut.adoc[]
+**** xref:Card_DocOut_Ribbon.adoc[]
+**** xref:Card_DocOut_Tab_General.adoc[]
+*** xref:Card_DocOrg.adoc[]
+**** xref:Card_DocOrg_Ribbon.adoc[]
+**** xref:Card_DocOrg_Tab_General.adoc[]
+*** xref:Card_DocAdm.adoc[]
+**** xref:Card_DocAdm_Ribbon.adoc[]
+**** xref:Card_DocAdm_Tab_General.adoc[]
+*** xref:Card_Doc_Tab_Category.adoc[]
+**** xref:Card_Doc_Tab_CatJourn_Journal_Entry.adoc[]
+*** xref:Card_Doc_Tab_Files.adoc[]
+*** xref:Card_Doc_Tab_Comments.adoc[]
+*** xref:Card_Doc_Tab_Connection.adoc[]
+*** xref:Card_Doc_Tab_History.adoc[]
+*** xref:Card_Doc_Tab_PerformerTask.adoc[]
+** xref:Card_Resol.adoc[]
+*** xref:Card_Resolution_Ribbon.adoc[]
+*** xref:Card_Resolution_Tab_General.adoc[]
+*** xref:Card_Resolution_Tab_Performer.adoc[]
+*** xref:Card_Resolution_Tab_Comments.adoc[]
+*** xref:Card_Resolution_Tab_History.adoc[]
+*** xref:Resolution_in_SimpleForm.adoc[]
+** xref:Cards_Task_by_Resolution.adoc[]
+*** xref:Task_by_Resolution_Ribbon.adoc[]
+*** xref:Task_by_Resolution_Tab_Task.adoc[]
+*** xref:Task_by_Resolution_Tab_ReportComments.adoc[]
+*** xref:Task_by_Resolution_Tab_History.adoc[]
+** xref:Cards_Task_for_Review.adoc[]
+*** xref:Task_for_Review_Ribbon.adoc[]
+*** xref:Task_for_Review_Tab_Task.adoc[]
+*** xref:Task_for_Review_Tab_History.adoc[]
+** xref:Ref_Rang_of_cases.adoc[]
+*** xref:Ref_Range_of_Cases_Ribbon.adoc[]
+*** xref:Ref_Range_of_Cases_TabGeneral.adoc[]
+** xref:Card_Case.adoc[]
+*** xref:Card_Case_Ribbon.adoc[]
+*** xref:Card_Case_Tab_General.adoc[]
+* xref:Operations.adoc[]
+** xref:Doc_Work.adoc[]
+*** xref:Doc_Work_General.adoc[]
+**** xref:Doc_Card_Create.adoc[]
+**** xref:Selection_Numbers_Document.adoc[]
+***** xref:Number_Temporary.adoc[]
+***** xref:Number_Permanent.adoc[]
+**** xref:Doc_File_Attach.adoc[]
+**** xref:Doc_Encrypting.adoc[]
+**** xref:Add_Comments_Doc.adoc[]
+**** xref:Doc_Categorization.adoc[]
+**** xref:Write_off_case.adoc[]
+**** xref:Hierarchy_Associated_Cards.adoc[]
+***** xref:Doc_Link_Add.adoc[]
+***** xref:Doc_Link_Create.adoc[]
+****** xref:Doc_Link_Create_Button.adoc[]
+****** xref:Doc_Link_Create_Context_Menu.adoc[]
+***** xref:Viewing_Hierarchy_Cards.adoc[]
+**** xref:Doc_Sign.adoc[]
+**** xref:Doc_Sign_View.adoc[]
+**** xref:Doc_Archive_General.adoc[]
+**** xref:File_Unload.adoc[]
+**** xref:Agreement_Document.adoc[]
+***** xref:Doc_Start_Approval.adoc[]
+***** xref:Monitoring_Agreement.adoc[]
+****** xref:View_Log_Approval.adoc[]
+****** xref:View_List_Approval.adoc[]
+****** xref:Management_Approvals_for_Document.adoc[]
+**** xref:Doc_Signing.adoc[]
+**** xref:Doc_CreateTasks.adoc[]
+**** xref:Sending_to_Familiarize.adoc[]
+**** xref:Sending_for_Consideration.adoc[]
+**** xref:Doc_Consideration_of_Doc.adoc[]
+***** xref:Task_Take_Consideration_Head_is_Offline.adoc[]
+**** xref:Acceptance_Transfer_of_Documents.adoc[]
+**** xref:StatementonControl.adoc[]
+***** xref:Statement_on_Control.adoc[]
+***** xref:Work_Controller.adoc[]
+***** xref:Transfer_to_State_Executed.adoc[]
+***** xref:Removal_from_Control.adoc[]
+**** xref:Doc_Send.adoc[]
+***** xref:Doc_Mail.adoc[]
+*** xref:Doc_Inc_Work.adoc[]
+**** xref:Selection_of_Recipients_Inc.adoc[]
+*** xref:Doc_Out_Work.adoc[]
+**** xref:Selection_of_Recipients_Out.adoc[]
+**** xref:Out_Doc_Send.adoc[]
+**** xref:Doc_Out_Work_Printing_an_Envelope.adoc[]
+**** xref:Doc_Out_Print_Registry_Mailings.adoc[]
+*** xref:Doc_Background_Work.adoc[]
+*** xref:Doc_Org_Work.adoc[]
+*** xref:Doc_Adm_Work.adoc[]
+** xref:Work_Resol.adoc[]
+*** xref:Card_Resol_Interface.adoc[]
+*** xref:Preparation_Resolution.adoc[]
+**** xref:Creat_Resolution.adoc[]
+***** xref:Creat_Initiative_Resol.adoc[]
+***** xref:Create_Resolition_of_Template.adoc[]
+***** xref:Creation_Resolution_of_Cards_DocAdm.adoc[]
+**** xref:Schedule_Resolution.adoc[]
+***** xref:Add_Registration_Data.adoc[]
+***** xref:Add_Executive_Resolution.adoc[]
+****** xref:Task_create_performer.adoc[]
+******* xref:Task_performer_select_from_guide.adoc[]
+******* xref:Task_performer_select_quick_search.adoc[]
+******* xref:Task_performer_select_from_list.adoc[]
+****** xref:Setting_control.adoc[]
+***** xref:Attach_DocFile_to_Resol.adoc[]
+*** xref:Sent_Resolution_for_Approval.adoc[]
+*** xref:Sent_Resolution_for_Revision.adoc[]
+*** xref:Sent_Resolution_for_Execution.adoc[]
+*** xref:Tree_Resolution.adoc[]
+**** xref:Management_Tree_Resolutions.adoc[]
+**** xref:State_Tree_Node_Resolutions.adoc[]
+*** xref:Edit_Resolution.adoc[]
+**** xref:Review_of_Resolution.adoc[]
+**** xref:Forced_Finish.adoc[]
+**** xref:Edit_Text_Resolution.adoc[]
+**** xref:Change_Performer_Task.adoc[]
+**** xref:Postponement_of_Execution.adoc[]
+**** xref:Edit_Control_Resolution.adoc[]
+*** xref:Control_Fulfil_Resolution.adoc[]
+**** xref:Task_Fulfil_Progress.adoc[]
+**** xref:Task_Approve.adoc[]
+***** xref:Acceptance_of_Organization.adoc[]
+***** xref:Acceptance_Subdivision.adoc[]
+** xref:Task_Work.adoc[]
+*** xref:Task_Take.adoc[]
+**** xref:Task_Take_Performance.adoc[]
+**** xref:Task_Take_Familiarize.adoc[]
+**** xref:Task_Take_Resolution.adoc[]
+***** xref:Task_get_responsible_performer.adoc[]
+***** xref:Task_Create_SubResolution.adoc[]
+**** xref:Task_Take_Consideration.adoc[]
+***** xref:Print_Resolution_Blank.adoc[]
+***** xref:Task_Create_Resolution.adoc[]
+*** xref:Task_Fulfil.adoc[]
+**** xref:Task_TakeInWork.adoc[]
+**** xref:Task_Delegate.adoc[]
+**** xref:Task_Fulfil_Fix.adoc[]
+***** xref:Add_Comments_Task.adoc[]
+***** xref:Add_Reports.adoc[]
+****** xref:Add_Reports_New_Doc.adoc[]
+****** xref:Add_Report_Existing_Doc.adoc[]
+****** xref:Add_Reports_Copy_Doc.adoc[]
+****** xref:Add_Reports_Delet_Doc.adoc[]
+***** xref:Attach_Report_Task.adoc[]
+**** xref:Setting_Reminders.adoc[]
+**** xref:Task_Familiarization_with_Documents.adoc[]
+*** xref:Task_Reject.adoc[]
+*** xref:Task_Deputy_Work.adoc[]
+*** xref:Task_Finish.adoc[]
+** xref:Work_Ref_Cases.adoc[]
+*** xref:Organization_Range_of_cases_Year.adoc[]
+**** xref:Create_Range_of_cases.adoc[]
+***** xref:Create_New_Range_of_cases.adoc[]
+***** xref:Create_Copy_Range_of_cases.adoc[]
+**** xref:Edit_Year.adoc[]
+**** xref:Del_Section.adoc[]
+**** xref:Organisation_Section_Range_of_cases.adoc[]
+***** xref:Add_Section.adoc[]
+***** xref:Rename_section.adoc[]
+***** xref:Del_Rang_of_cases.adoc[]
+**** xref:Work_of_Case.adoc[]
+***** xref:State_machine_Card_Case.adoc[]
+***** xref:Creat_New_Cases.adoc[]
+***** xref:Edit_Card_Case.adoc[]
+***** xref:Del_Card_Case.adoc[]
+*** xref:Ratification_Rang_of_cases.adoc[]
+*** xref:Print_Rang_of_cases.adoc[]
+*** xref:Close_Range_of_cases.adoc[]
+*** xref:Search_Range_of_cases.adoc[]
+**** xref:Search_Section_of_Ref_Rang.adoc[]
+**** xref:Search_Case.adoc[]
+* xref:Abbreviations.adoc[]
+* xref:Terms.adoc[]
