GBL-2306 / TSK-5456 -- перевёл в новый формат руководство администратора Делопроизводства 5

--- a/modules/ROOT/pages/recommendations.adoc
+++ b/modules/ROOT/pages/recommendations.adoc
@@ -21,11 +21,11 @@
 
 . Добавление нового вида карточки со стандартной логикой обработки.
 
-В Справочнике видов карточек добавить в Дерево видов дочерние виды с полным наследованием от родительского вида.
+в _Справочнике видов карточек_ добавить в Дерево видов дочерние виды с полным наследованием от родительского вида.
 
 . Исключение из использования стандартных видов карточек.
 
-В Справочнике видов карточек установить флаг Не использовать при выборе.
+в _Справочнике видов карточек_ установить флаг Не использовать при выборе.
 
 После обновления флаг Не использовать при выборе необходимо установить повторно.
 
