--- a/modules/ROOT/pages/requirements.adoc
+++ b/modules/ROOT/pages/requirements.adoc
@@ -5,7 +5,7 @@
 
 Специальные требования к аппаратному обеспечению клиентского и серверного компьютера не предъявляются.
 
-NOTE: Результаты замера производительности приведены в xref:admin:Appendix_A.adoc[Приложении A. Производительность].
+NOTE: Результаты замера производительности приведены в xref:admin:appendix-a.adoc[Приложении A. Производительность].
 
 [#dv]
 == Требования к системе {dv}
