--- a/modules/admin/admin.adoc
+++ b/modules/admin/admin.adoc
@@ -11,33 +11,25 @@
 **** xref:resolution-standard-texts.adoc[]
 **** xref:resolution-template.adoc[]
 *** Настройка карточки "ДокументДП"
-**** xref:Mode_Setting_Creating_DocOf.adoc[]
-***** xref:Mode_Creating_Doc_in_Response.adoc[]
-***** xref:Mode_Creating_Doc_in_Addition.adoc[]
-***** xref:Mode_Creating_Doc_on_Basis.adoc[]
-**** xref:ReferenceTypes_Setting_NumberDoc.adoc[]
-**** xref:Designer_Reference_Setting_DocAttributes.adoc[]
-**** xref:ReferenceTypes_Print_Envelope_Template.adoc[]
-**** xref:Add_New_Types_Card_Doc.adoc[]
-*** xref:Settings_Card_Task.adoc[]
-*** xref:Settings_Card_Task_for_Review.adoc[]
+**** xref:document-create-modes.adoc[]
+**** xref:document-number-settings.adoc[]
+**** xref:document-attributes-statuses.adoc[]
+**** xref:document-package-print-template.adoc[]
+**** xref:document-subordinate-kind.adoc[]
+*** xref:task-by-resolution-settings.adoc[]
+*** xref:task-review-settings.adoc[]
 **** xref:Mode_Creating_Task_for_Review.adoc[]
-**** xref:ReferenceTypes_Setting_Task_for_Review.adoc[]
-*** xref:Settings_Card_GroupTask.adoc[]
-**** xref:Settings_Group_Tasks.adoc[]
-**** xref:Mode_Creating_GroupTask_to_Familiarize.adoc[]
-*** xref:Mode_Setting_Creating_Approval.adoc[]
-**** xref:Completion_of_Built_Agreement.adoc[]
-*** xref:View_Tree_Resolution.adoc[]
-**** xref:Properties_Tree_Resolutions.adoc[]
-*** xref:Settings_Storage_Life_RangeOfCases.adoc[]
-*** xref:Designer_Reference_Setting_of_Controls.adoc[]
-*** xref:Settings_Reference_Numbering.adoc[]
-*** xref:Designer_Role.adoc[]
-*** xref:Designer_States.adoc[]
-**** xref:Status_Card_Document.adoc[]
-*** xref:Business_Processes.adoc[]
-** xref:Abbreviations.adoc[]
-** xref:Terms.adoc[]
-** xref:Appendixes.adoc[]
-*** xref:Appendix_A.adoc[]
+**** xref:resolution-print-template.adoc[]
+*** xref:task-group-settings.adoc[]
+**** xref:task-group-settings-resolution.adoc[]
+**** xref:task-group-acknowledgement-create-modes.adoc[]
+*** xref:approval-settings.adoc[]
+*** xref:resolution-tree-settings.adoc[]
+*** xref:nomenclature-storage-life.adoc[]
+*** xref:document-control-state-settings.adoc[]
+*** xref:numeration-rules-settings.adoc[]
+*** xref:role-model-settings.adoc[]
+*** xref:state-buttons-settings.adoc[]
+*** xref:business-processes-administration.adoc[]
+** Приложения
+*** xref:appendix-a.adoc[]
