--- a/modules/admin/pages/admin-functions.adoc
+++ b/modules/admin/pages/admin-functions.adoc
@@ -6,7 +6,7 @@
 * xref:security.adoc[Добавление] сотрудников в группы безопасности.
 * xref:personal-folder.adoc[Настройка] дерева папок.
 * xref:security.adoc#access[Администрирование] Справочника номенклатуры дел 5 (настройка прав доступа к этому справочнику).
-* xref:Business_Processes.adoc[Поддержание] в рабочем состоянии встроенных БП Приложения;
+* xref:business-processes-administration.adoc[Поддержание] в рабочем состоянии встроенных БП Приложения;
 * При необходимости:
 ** Редактирование справочников.
 ** xref:resolution-template.adoc[Создание] шаблонов резолюций.
