--- a/modules/admin/pages/document-control-state-settings.adoc
+++ b/modules/admin/pages/document-control-state-settings.adoc
@@ -4,6 +4,7 @@
 
 По умолчанию настроены два вида состояния контроля: "На контроле" и "Снят с контроля"; удалить их нельзя.
 
-image::Doc_Control.png[Конструктор справочников. Контроль]
+.Конструктор справочников. Контроль
+image::directory-designer-control.png[Конструктор справочников. Контроль]
 
 Остальные состояния контроля могут настраиваться администратором в зависимости от регламентов организации.
