--- a/modules/admin/pages/resolution-settings.adoc
+++ b/modules/admin/pages/resolution-settings.adoc
@@ -1,6 +1,6 @@
 = Настройки вида карточки "Резолюция"
 
-Настройка вида карточки _Резолюция_ осуществляется в Справочнике видов карточек.
+Настройка вида карточки _Резолюция_ осуществляется в _Справочнике видов карточек_.
 
 .Справочник видов карточек
 image::card-kinds-directory.png[Справочник видов карточек]
@@ -33,7 +33,7 @@ image::card-kinds-directory.png[Справочник видов карточек
 . Откройте _Справочник видов карточек_.
 . Выберите настраиваемый вид карточек типа _Резолюция_.
 . Перейдите на вкладку _Общие_ к области _Режим создания_.
-. Нажмите на кнопку image:buttons/Plus_1.png[image]. Появится окно _Настройка способа создания карточки_.
+. Нажмите на кнопку image:buttons/plus-green.png[Зелёный плюс]. Появится окно _Настройка способа создания карточки_.
 . Заполните следующие поля:
 +
 * В поле _Название_ введите название, которое будет отображаться в выпадающем списке кнопки создания резолюции в карточке _Задание_.
