--- a/modules/user/pages/Task_by_Resolution_Ribbon.adoc
+++ b/modules/user/pages/Task_by_Resolution_Ribbon.adoc
@@ -15,7 +15,7 @@
 .. *Просмотреть* image:buttons/Review_Comment.png[image] -- открывает окно Комментарий для просмотра выделенного комментария.
 .. *Удалить* image:buttons/Delet_Comment.png[image] -- удаляет выделенный комментарий.
 . *Документ во исполнение*.
-.. *Создать* (image:buttons/Create_a_Report.png[image]) -- позволяет добавить в задание документ во исполнение. Открывает окно Справочник видов карточек для выбора вида карточки документа во исполнение, после чего создает новую карточку выбранного вида.
+.. *Создать* (image:buttons/Create_a_Report.png[image]) -- позволяет добавить в задание документ во исполнение. Открывает окно _Справочник видов карточек_ для выбора вида карточки документа во исполнение, после чего создает новую карточку выбранного вида.
 .. *Добавить* (image:buttons/Add_a_Report.png[image]) -- позволяет добавить в задание документ во исполнение. Открывает окно для выбора существующей карточки документа.
 .. *Копировать документ во исполнение* image:buttons/Copy_Report.png[image] -- позволяет скопировать в задание все документы во исполнение, прикрепленные к выделенному в данный момент в Дереве резолюций подчиненному заданию.
 .. *Удалить все* image:buttons/Delet_Report.png[image] -- удаляет из карточки задания все прикрепленные документы во исполнение.
