--- a/modules/ROOT/pages/business-processes.adoc
+++ b/modules/ROOT/pages/business-processes.adoc
@@ -19,7 +19,7 @@
 *** В таблице исполнителей карточки резолюции в колонке _Отчет_ для данного задания установлена опция `*Текстовый*` или `*Требуется документ во исполнение*`.
 ** Копируется ссылка на документ во исполнение из подчиненных заданий первого уровня при соблюдении условий:
 *** В таблице исполнителей карточки резолюции в колонке Отчет для данного задания установлена опция `*Требуется документ во исполнение*`.
-*** Тип ссылки, с которой прикреплен документ, совпадает с указанным для карточки резолюции в Справочнике видов карточек в поле _Тип ссылки_ документа во исполнение.
+*** Тип ссылки, с которой прикреплен документ, совпадает с указанным для карточки резолюции в _Справочнике видов карточек_ в поле _Тип ссылки_ документа во исполнение.
 +
 . _{ow} -- Автозавершение родительской резолюции_.
 +
