--- a/modules/ROOT/pages/card-kinds.adoc
+++ b/modules/ROOT/pages/card-kinds.adoc
@@ -1,6 +1,6 @@
 = Виды карточек
 
-Приложение "{ow}" добавляет в Справочник видов карточек виды карточек, перечисленные далее.
+Приложение "{ow}" добавляет в _Справочник видов карточек_ виды карточек, перечисленные далее.
 
 * Для типа _Документ_ -- вид _ДокументДП_ и дочерние виды:
 ** _Входящий_ -- предназначенный для регистрации входящих документов.
