--- a/modules/admin/pages/Mode_Creating_Task_for_Review.adoc
+++ b/modules/admin/pages/Mode_Creating_Task_for_Review.adoc
@@ -15,10 +15,10 @@
 
 Чтобы добавить режим создания "На рассмотрение", выполните следующие действия:
 
-. Перейдите в Справочник видов карточек.
+. Перейдите в _Справочник видов карточек_.
 . Выберите вид карточек На рассмотрение.
-. Перейдите на вкладку "Общие" к области "Режим создания".
-. Нажмите на кнопку image:buttons/Plus_1.png[image].Появится окно Настройка способа создания карточки. Заполните следующие поля:
+. Перейдите на вкладку _Общие_ к области _Режим создания_.
+. Нажмите на кнопку image:buttons/plus-green.png[Зелёный плюс].Появится окно Настройка способа создания карточки. Заполните следующие поля:
 * в поле *Название* введите название, которое будет отображаться в выпадающем списке кнопки создания документа;
 * в поле *Способ создания* выберите вариант "Задание на рассмотрение";
 * в поле *Вид родительской карточки* выберите вид карточки ДокументДП (Входящий, Исходящий, Информационно-справочный), для которой необходимо настроить новый режим создания связанной карточки задания;
@@ -29,4 +29,4 @@ ____
 ____
 * установите флаг *Отображать команду*;
 * если требуется, в поле *Операция редактирования* назначьте операцию редактирования для способа создания, а также заполните остальные поля.
-. Сохраните результат, нажав кнопку *OK* в окне "Настройка способа создания карточки".
+. Сохраните результат, нажав кнопку *OK* в окне _Настройка способа создания карточки_.
