--- a/modules/user/pages/Number_Permanent.adoc
+++ b/modules/user/pages/Number_Permanent.adoc
@@ -6,7 +6,7 @@ image::Selection_Numbers_Document.png[Номер документа]
 
 Постоянный номер может выдаваться следующими способами:
 
-* Автоматически при первом сохранении (если в Справочнике видов карточек для данного вида карточки установлен флаг *Выделять постоянный номер автоматически*) или регистрации (если флаг *Выделять постоянный номер автоматически* снят) карточки. В этом случае номер выдается по правилам, определенным в Конструкторе правил нумерации.
+* Автоматически при первом сохранении (если в _Справочнике видов карточек_ для данного вида карточки установлен флаг *Выделять постоянный номер автоматически*) или регистрации (если флаг *Выделять постоянный номер автоматически* снят) карточки. В этом случае номер выдается по правилам, определенным в Конструкторе правил нумерации.
 * Вручную при нажатии кнопки image:buttons/Number.png[image], расположенной справа от поля Постоянный. Номер будет выдан автоматически по правилам, определенным в Конструкторе правил нумерации.
 * Вручную при нажатии кнопки image:buttons/Number_1.png[image], расположенной справа от поля Постоянный. Номер нужно будет ввести самостоятельно.
 
