Ой, а делопроизводство 5 и не нужно, тупанул

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -28,7 +28,7 @@
 . xref:index.adoc[Общие сведения] -- раздел содержит общие сведения о Приложении, требования к подготовке пользователей, составные части Приложения и назначение документации.
 . xref:admin:install.adoc[Установка и настройка] -- инструкция по установке Приложения.
 . xref:admin:admin-functions.adoc[Функции администратора] -- описание настроек Приложения, выполняемых администратором {dv}.
-. xref:user:Preparationfor_work.adoc[Подготовка к работе] -- условия для работы с карточками Модуля в программе {wincl}/РМА).
-. xref:user:Folder_Application_OfficeWork.adoc[Папки приложения] -- описание папок Приложения.
+. xref:user:work-preparation.adoc[Подготовка к работе] -- условия для работы с карточками Модуля в программе {wincl}/РМА).
+. xref:user:application-folders.adoc[Папки приложения] -- описание папок Приложения.
 . xref:user:Description_Fields_and_Buttons.adoc[Описание интерфейса карточек Приложения] -- приведено описание пользовательского интерфейса карточек ДокументДП, Резолюция, заданий По резолюции и На рассмотрение, Справочника номенклатуры дел 5 и карточки Дело.
 . xref:user:Operations.adoc[Описание операций] -- описание основных операций с документами, резолюциями и заданиями Приложения, а также со Справочником номенклатуры дел 5.
