--- a/modules/user/pages/folders-documents-case.adoc
+++ b/modules/user/pages/folders-documents-case.adoc
@@ -4,22 +4,23 @@
 
 Документы в представление выводятся по результатам параметрического поиска; в качестве параметров поиска можно указать:
 
-* год действия дела;
-* номер дела;
-* заголовок документа;
-* количество листов.
+* Год действия дела.
+* Номер дела.
+* Заголовок документа.
+* Количество листов.
 
-image::Folder_Search_Case.png[Параметры поиска документов дела]
+.Параметры поиска документов дела
+image::casedocument-search-parameters.png[Параметры поиска документов дела]
 
 Для папки Дело настроено представление, в колонках которого отображаются следующие данные:
 
-* регистрационный номер;
-* дата регистрации;
-* состояние;
-* название;
-* содержание.
+* Регистрационный номер.
+* Дата регистрации.
+* Состояние.
+* Название.
+* Содержание.
 
 Данные представления сгруппированы по признакам:
 
-* состояние карточки;
-* вид карточки.
+* Состояние карточки.
+* Вид карточки.
