--- a/modules/user/user.adoc
+++ b/modules/user/user.adoc
@@ -1,17 +1,16 @@
 * Руководство пользователя
-** xref:Preparationfor_work.adoc[]
-*** xref:Application_run.adoc[]
-** xref:Folder_Application_OfficeWork.adoc[]
-*** xref:Navigator_folders_OWmodul_document.adoc[]
-**** xref:Folder_OfficeWork_DocInc.adoc[]
-**** xref:Folder_OfficeWork_DocBackground.adoc[]
-**** xref:Folder_OfficeWork_DocOut.adoc[]
-**** xref:Folder_OfficeWork_DocOrg.adoc[]
-**** xref:Folder_OfficeWork_DocAdm.adoc[]
-**** xref:Folder_OfficeWork_Case.adoc[]
-**** xref:Folder_OfficeWork_SearchDoc.adoc[]
-*** xref:Navigator_folders_OWmodul_report.adoc[]
-*** xref:Folder_OfficeWork_Resolution.adoc[]
+** xref:work-preparation.adoc[]
+** xref:application-folders.adoc[]
+*** xref:folders-documents.adoc[]
+**** xref:folders-documents-incoming.adoc[]
+**** xref:folders-documents-info-reference.adoc[]
+**** xref:folders-documents-outgoing.adoc[]
+**** xref:folders-documents-organizational.adoc[]
+**** xref:folders-documents-administrative.adoc[]
+**** xref:folders-documents-case.adoc[]
+**** xref:folders-documents-search.adoc[]
+*** xref:folders-reports.adoc[]
+*** xref:folders-resolution.adoc[]
 ** xref:Description_Fields_and_Buttons.adoc[]
 *** xref:Card_Doc.adoc[]
 **** xref:Card_DocInc.adoc[]
