--- a/modules/user/pages/Task_Fulfil_Progress.adoc
+++ b/modules/user/pages/Task_Fulfil_Progress.adoc
@@ -9,7 +9,7 @@
 . Откройте карточку задания, выполнение которого требуется проконтролировать.
 +
 ____
-Папка, в которой отображается контролируемое задание, определяется ролью пользователя в карточке. См. пункт xref:Folder_Application_OfficeWork.adoc[Описание папок приложения].
+Папка, в которой отображается контролируемое задание, определяется ролью пользователя в карточке. См. пункт xref:application-folders.adoc[Описание папок приложения].
 ____
 . Перейдите к секции Резолюции и ознакомьтесь с процессом выполнения задания.
 +
